--- a/static/resume.css
+++ b/static/resume.css
@@ -5,17 +5,24 @@ body {
     text-align: justify;
     line-height: 125%;
     word-wrap: break-word;
+    color: #333;
 }
 a {
     color: black;
     text-decoration: none;
 }
+h1,h2{
+    color: #fff;
+}
 h1,h2,h3{
     font-family: "Roboto Slab", "Helvetica Neue", sans-serif;
+    font-weight: 500;
 }
 .header h2{
     margin:0 -10mm;
     padding: 5mm 10mm;
+    letter-spacing: 0.1em;
+    font-size: 2em;
 }
 .skills h4, .languages h4 {
     font: 200 1em "Roboto";
@@ -28,7 +35,7 @@ h1,h2,h3{
 .percent-20:after{
     content:" ";
     display:block;
-    background:red;
+    background:rgb(56, 182, 171);
     height:0.7em;
     border-radius:1em;
     margin:-2.3em 0 0 50%;
@@ -37,7 +44,7 @@ h1,h2,h3{
 .percent-40:after{
     content:" ";
     display:block;
-    background:red;
+    background:rgb(56, 182, 171);
     height:0.7em;
     border-radius:1em;
     margin:-1.1em 0 0 50%;
@@ -46,7 +53,7 @@ h1,h2,h3{
 .percent-60:after{
     content:" ";
     display:block;
-    background:red;
+    background:rgb(56, 182, 171);
     height:0.7em;
     border-radius:1em;
     margin:-1.1em 0 0 50%;
@@ -55,7 +62,7 @@ h1,h2,h3{
 .percent-80:after{
     content:" ";
     display:block;
-    background:red;
+    background:rgb(56, 182, 171);
     height:0.7em;
     border-radius:1em;
     margin:-1.1em 0 0 50%;
@@ -64,7 +71,7 @@ h1,h2,h3{
 .percent-100:after{
     content:" ";
     display:block;
-    background:red;
+    background:rgb(56, 182, 171);
     height:0.7em;
     border-radius:1em;
     margin:-1.1em 0 0 50%;
@@ -76,7 +83,7 @@ h1,h2,h3{
     grid-template-columns: 70% 30%;
     grid-template-rows: audo auto;
     align-items: start;
-    padding: 0 10mm 5mm 10mm;
+    padding: 0 10mm 10mm 10mm;
 }
 .header, .experience, .education, .contact, .skills, .languages{
     margin-bottom: 0;
@@ -89,6 +96,7 @@ h1,h2,h3{
 .header {
     grid-row: 1;
     grid-column: 1 / 3;
+    margin-bottom: 1em;
 }
 .contact{
     grid-column: 2;
@@ -114,9 +122,14 @@ h1,h2,h3{
 .footer{
     grid-column-start: 1;
     grid-column-end: span 2;
-    grid-row: 7;
+    grid-row-start: 7;
+    grid-row-start: 7;
     font: 300 0.6em "Roboto";
     text-align: center;
+    background-color: rgb(56, 182, 171);
+    margin: 10mm -10mm -10mm -10mm;
+    height: 10mm;
+    padding: 0;
 }
 .footer p{
     vertical-align: bottom;
@@ -134,25 +147,26 @@ p {
 h2 {
     display: block;
     width: 100%;
-    background-color: red;
+    background-color: rgb(56, 182, 171);
     padding: 0.2em;
+    letter-spacing: 0.1em;
     text-transform: uppercase;
 }
 .education h3, .experience h3 {
     margin: 0 0 0.4em 0;
 }
 .education b, .experience b{
-    color: red;
+    color: rgb(56, 182, 171);
 }
 .skills h3, .languages h2 {
     padding-bottom: 0.2em;
-    border-bottom: 0.15em dotted red;
+    border-bottom: 0.15em dotted rgb(56, 182, 171);
 }
 .todo, .done{
     display:none;
 }
 .education h4, .experience h4{
-    color: red;
+    color: rgb(56, 182, 171);
     margin: 0;
     padding: 0;
     line-height: 50%;
