--- a/static/resume.css
+++ b/static/resume.css
@@ -84,7 +84,7 @@ h1,h2,h3{
     grid-template-columns: 70% 30%;
     grid-template-rows: audo auto;
     align-items: start;
-    padding: 0 5mm 10mm 5mm;
+    padding: 0 5mm 8mm 5mm;
 }
 .header, .experience, .education, .contact, .skills, .languages{
     margin-bottom: 0;
@@ -128,12 +128,13 @@ h1,h2,h3{
     font: 300 0.6em "Roboto";
     text-align: center;
     background-color: rgb(56, 182, 171);
-    margin: 0 -10mm -10mm -10mm;
-    height: 10mm;
+    margin: 0 -10mm -8mm -10mm;
+    height: 8mm;
     padding: 0;
 }
-.footer p{
-    vertical-align: bottom;
+.footer .outline-text-2 {
+    height: 100%;
+    vertical-align: middle;
 }
 .footer h1, .footer h2{
     display:none;
@@ -155,6 +156,17 @@ h2 {
 }
 .education h3, .experience h3 {
     margin: 0 0 0.4em 0;
+    padding-left: 1em;
+}
+.education h3:before, .experience h3:before {
+    margin-left: -0.5em;
+    padding: 0 0.3em 0 0;
+    content: "⬢";
+    font-size: 1.5em;
+    width: 1em;
+    position: relative;
+    top: 0.25em;
+    color: #aaa;
 }
 .skills h3, .languages h2 {
     padding-bottom: 0.2em;
@@ -163,17 +175,21 @@ h2 {
 .todo, .done{
     display:none;
 }
+.education h2{
+    margin-top: 0;
+}
 .education h4, .experience h4{
     color: rgb(56, 182, 171);
-    margin: 0;
+    margin: 0 0 0 2.5em;
     padding: 0;
     line-height: 50%;
 }
 .outline-text-4 ul{
-    padding: 0 0 0 4mm;
+    padding: 0 0 0 7.5mm;
     margin-bottom: 0;
     font: 300 0.9em "Roboto";
-    line-height: 125%;
+    line-height: 150%;
+    list-style: square;
 }
 .education .outline-3, .experience .outline-3{
     padding: 0.1em 0 1.2em 0;
@@ -182,8 +198,7 @@ h2 {
     float:left;
     text-transform: uppercase;
     display:block;
-    width:28%;
-    padding-right: 0.1em;
+    padding-right: 0.2em;
 }
 
 /* ---------------- HEXAGON STUFFS -----------------*/
