--- a/static/resume.css
+++ b/static/resume.css
@@ -6,6 +6,7 @@ body {
     line-height: 125%;
     word-wrap: break-word;
     color: #333;
+    background-color: #fefefe;
 }
 a {
     color: black;
@@ -85,6 +86,8 @@ h1,h2,h3{
     grid-template-rows: audo auto;
     align-items: start;
     padding: 0 5mm 8mm 5mm;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 .header, .experience, .education, .contact, .skills, .languages{
     margin-bottom: 0;
@@ -158,18 +161,28 @@ h2 {
     margin: 0 0 0.4em 0;
     padding-left: 1em;
 }
-.education h3:before, .experience h3:before {
+.experience div h3:first-child::before, .education div h3:first-child::before{
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    display: inline-block;
+    text-decoration: inherit;
+    float: left;
+    content: "\f111";
     margin-left: -0.5em;
     padding: 0 0.3em 0 0;
-    content: "⬢";
-    font-size: 1.5em;
+    font-size: 1.25em;
     width: 1em;
     position: relative;
     top: 0.25em;
     color: #aaa;
 }
+.experience div:nth-of-type(2) h3:first-child::before {
+    content: "\f042";
+    color: rgb(56, 182, 171);
+}
 .skills h3, .languages h2 {
-    padding-bottom: 0.2em;
+    padding-bottom: 0.3em;
     border-bottom: 0.15em dotted rgb(56, 182, 171);
 }
 .todo, .done{
@@ -189,84 +202,51 @@ h2 {
     margin-bottom: 0;
     font: 300 0.9em "Roboto";
     line-height: 150%;
-    list-style: square;
+    list-style: dot;
 }
 .education .outline-3, .experience .outline-3{
     padding: 0.1em 0 1.2em 0;
 }
-.contact .org-dl dt{
-    float:left;
-    text-transform: uppercase;
-    display:block;
-    padding-right: 0.2em;
+.contact h2{
+    display: none;
 }
-
-/* ---------------- HEXAGON STUFFS -----------------*/
-.hexagon {
-  position: absolute;
-  top:1mm;
-  right: 10mm;
-  width: 70px;
-  height: 40.41px;
-  margin: 20.21px 0;
-  background-image: url(https://raw.githubusercontent.com/peel/talks/master/photo.jpg);
-  background-size: auto 80.8290px;
-  background-position: center;
+.contact h3{
+    font-size: 0.9em;
+    margin: 0.5em;
 }
-
-.hexTop,
-.hexBottom {
-  position: absolute;
-  z-index: 1;
-  width: 49.50px;
-  height: 49.50px;
-  overflow: hidden;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background: inherit;
-  left: 10.25px;
+.contact .email::before,
+.contact .phone::before,
+.contact .web::before,
+.contact .github::before{
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    display: inline-block;
+    text-decoration: inherit;
+    float: left;
+    margin: 0 1em 0 0.3em;
 }
-
-/*counter transform the bg image on the caps*/
-.hexTop:after,
-.hexBottom:after {
-  content: "";
-  position: absolute;
-  width: 70.0000px;
-  height: 40.414518843273804px;
-  -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY(-20.2073px);
-  -ms-transform:      rotate(45deg) scaleY(1.7321) translateY(-20.2073px);
-  transform:          rotate(45deg) scaleY(1.7321) translateY(-20.2073px);
-  -webkit-transform-origin: 0 0;
-  -ms-transform-origin: 0 0;
-  transform-origin: 0 0;
-  background: inherit;
+.contact .email::before{
+    content: "\f0e0"
 }
-
-.hexTop {
-  top: -24.7487px;
+.contact .phone::before{
+    content: "\f095"
 }
-
-.hexTop:after {
-  background-position: center top;
+.contact .web::before{
+    content: "\f0c1"
 }
-
-.hexBottom {
-  bottom: -24.7487px;
+.contact .github::before{
+    content: "\f113"
 }
-
-.hexBottom:after {
-  background-position: center bottom;
+.contact .photo h3{
+    display: none;
 }
-
-.hexagon:after {
-  content: "";
-  position: absolute;
-  top: 0.0000px;
-  left: 0;
-  width: 70.0000px;
-  height: 40.4145px;
-  z-index: 2;
-  background: inherit;
+.contact .photo{
+    margin: -17mm 0 0.3em 0;
+    content: " ";
+    width: 100%;
+    height: 55mm;
+    background-image: url(https://raw.githubusercontent.com/peel/talks/master/photo.jpg);
+    background-size: 100%;
+    background-position-y: 21%;
 }
